Apunte y Miller-Rabin.py - Se  terminó la sección de exponenciaciónmmodular - Se arregló el test de Miller_Rabin (estaba mal)

--- a/2021-1/apunte/Cap.03.tex
+++ b/2021-1/apunte/Cap.03.tex
@@ -856,6 +856,7 @@ for i = 2 to n:
 \vskip .4cm
 \end{minipage}
 
+Este código en si no es eficiente, pero muestra una forma sencilla de obtener primos con el uso de la criba de Eratóstenes.  
 \end{observacion*} 
 
 %\vskip .5 cm
