--- a/2021-1/apunte/config-definiciones.tex
+++ b/2021-1/apunte/config-definiciones.tex
@@ -131,3 +131,6 @@
 \newcommand{\varx}{0} % variable para cambiar coordenada x
 \newcommand{\vary}{0} % variable para cambiar coordenada y
 \newcommand{\varc}{1} % variable para hacer homotecias
+
+\newcommand{\modulo}{{\scriptstyle \%}\,}
+\newcommand{\cociente}{\,/\hskip-.1cm/\,}
