--- a/2021-1/practicos/Practico2.tex
+++ b/2021-1/practicos/Practico2.tex
@@ -88,9 +88,6 @@
 \end{enumerate}
 
 
-\item ¿Cuántos números de 6 cifras pueden formarse con los dígitos de 112200?
-
-
 \item ¿Cuántos números impares de cuatro cifras hay?
 
 
@@ -166,6 +163,8 @@
     \item ¿De cuántas formas distintas pueden ordenarse las letras de la palabra MATEMATICA si se pide que las consonantes y las vocales se alternen?
 \end{enumerate}
 
+
+\item ¿Cuántos números de 6 cifras pueden formarse con los dígitos de $112200$?
 
 \item ¿Cuántas diagonales tiene un polígono regular de $n$ lados?
 
