--- a/2021-1/apunte/Cap.04.tex
+++ b/2021-1/apunte/Cap.04.tex
@@ -562,7 +562,7 @@ $n$, existe $v$ tal que $uv\equiv 1\pmod{n}$].
 \end{section}
 
 
-\begin{section}{El criptosistema RSA (*)}\label{seccion-el-criptosistema-rsa}
+\begin{section}{El criptosistema RSA}\label{seccion-el-criptosistema-rsa}
 
 
 Una de las aplicaciones más elementales y difundidas de la aritmética es en el diseño de sistemas criptográficos. El RSA es el más conocido de ellos y será presentado en esta sección. \index{RSA}
