--- a/2021-1/apunte/Cap.05.tex
+++ b/2021-1/apunte/Cap.05.tex
@@ -1062,7 +1062,7 @@ En general, para probar que el número cromático de un grafo dado es $k$, debem
 \end{section}
 
 
-\begin{section}{El algoritmo greedy para coloración de vértices}\label{seccion-algoritmo-greedy-para-coloreo}
+\begin{section}{Algoritmos greedy en grafos}\label{seccion-algoritmo-greedy-para-coloreo}
 
 Es bastante difícil encontrar el número cromático de un grafo dado. En realidad, no se conoce ningún algoritmo para este problema que trabaje en ``tiempo polinomial'', y la mayoría de la gente cree que tal algoritmo no existe. Sin embargo hay un método simple de hacer una coloración cromática usando un  ``razonable'' número de colores.
 
