--- a/2021-1/beamer/C06_md1.tex
+++ b/2021-1/beamer/C06_md1.tex
@@ -100,7 +100,7 @@
 	\\[\baselineskip] ${}^{}$
 	\\[\baselineskip]
 }
-\date[07/04/2020]{7 de abril  de 2020}
+\date[06/04/2021]{6 de abril  de 2021}
 
 
 
@@ -214,7 +214,7 @@ Remarcamos que para aplicar el principio de adición es necesario que los evento
 	{\color{blue} Ejemplo}
 	\vskip .2cm
 	
-	Â¿Cuántas palabras de dos letras hay? (26 letras,  no importa si tienen significado)
+	¿Cuántas palabras de dos letras hay? (26 letras,  no importa si tienen significado)
 	\pause
 	
 	\vskip .2cm
@@ -233,7 +233,7 @@ Remarcamos que para aplicar el principio de adición es necesario que los evento
 
  Sea  $X = \{ 1, 2, 3 \}$.
  \vskip .2cm
- Â¿De cuántas formas se pueden elegir dos de estos números en forma ordenada?
+ ¿De cuántas formas se pueden elegir dos de estos números en forma ordenada?
 	\vskip .2cm
 {\bf Notación:} si elegimos $a$ y $b$ en forma ordenada, denotamos $ab$. 
      \vskip .2cm
@@ -247,7 +247,7 @@ Entonces, las posibilidades son
 	 \vskip .1cm 
 	Es decir, hay $9 = 3^2$ formas posibles. 
 	
-	 \vskip .2cm Â¿Cómo justificamos esto? \pause Por el principio de multiplicación
+	 \vskip .2cm ¿Cómo justificamos esto? \pause Por el principio de multiplicación
 
 
 \end{frame}
@@ -318,7 +318,7 @@ El razonamiento anterior  se puede extender:
 	\vskip .3cm
 	{\color{blue} Ejemplo}
 	\vskip .2cm
-	Â¿Cuántos números de cuatro dígitos pueden formarse con
+	¿Cuántos números de cuatro dígitos pueden formarse con
 	los dígitos $1, 2, 3, 4, 5, 6$?
 	\vskip .2cm \pause
 	Por la proposición anterior es claro que hay $6^4$ números posibles.
@@ -329,7 +329,7 @@ El razonamiento anterior  se puede extender:
 \vskip .8cm
 {\color{blue} Ejemplo}
 \vskip .2cm
-	Â¿Cuántos números de $5$ dígitos y capicúas pueden formarse
+	¿Cuántos números de $5$ dígitos y capicúas pueden formarse
 	con los dígitos $1, 2, 3, 4, 5, 6, 7, 8$? 
 	\vskip .2cm \pause
 	Un número
@@ -347,7 +347,7 @@ El razonamiento anterior  se puede extender:
 	
 		{\color{blue} Ejemplo}
 		\vskip .2cm
-Sea $X$ un conjunto de $n$ elementos. Â¿Cuántos subconjuntos tiene este conjunto?
+Sea $X$ un conjunto de $n$ elementos. ¿Cuántos subconjuntos tiene este conjunto?
 \vskip .2cm
 Por ejemplo, si $X = \{ a, b, c \}$ los subconjuntos de $X$ son:\pause
 $$
@@ -375,7 +375,7 @@ posibles subconjuntos de $X$.
 \end{frame}
 
 \begin{frame}
-Razonando de manera análoga
+Razonando de manera análoga obtenemos nuestro primer resultado ``no sencillo'' de conteo. 
 \vskip .4cm
 %\begin{proposicion} 
 {\color{blue}Proposición}
