--- a/2021-1/beamer/C07_md1.tex
+++ b/2021-1/beamer/C07_md1.tex
@@ -99,7 +99,7 @@
 	\\[\baselineskip] ${}^{}$
 	\\[\baselineskip]
 }
-\date[09/04/2020]{9 de abril  de 2020}
+\date[08/04/2021]{8 de abril  de 2021}
 
 
 
@@ -214,15 +214,13 @@
 \begin{frame}	
 	
 	
-	{\color{blue}Ejemplo}
+	{\color{blue}Ejemplo (repetido)}
 	\vskip .2cm
 	
 	Si  hay 10 personas ¿De cuántas formas puedo  hacer una fila de 7 personas?
 	\vskip .2cm
-	{\color{blue}Solución.}
+	{\color{blue}Solución (aplicando la proposición).}
 	\vskip .2cm
-	Apliquemos el teorema, 
-	\vskip .3cm	
 	\begin{tabular}{llr}
 		Cantidad  de elementos: &$\to$ & $n = 10$ \\
 		Cantidad  de elecciones: &$\to$ & $m = 7$ 
@@ -282,9 +280,9 @@
 	Primero hagámoslo usando el principio de multiplicación:
 	\vskip .2cm
 	\begin{itemize}
-		\item 1Â° persona: 9 lugares posibles. Total: 9
-		\item 2Â° persona: 8 lugares posibles. Total: $9 \times 8$
-		\item 3Â° persona: 7 lugares posibles. Total: $9\times 8\times 7$.
+		\item 1° persona: 9 lugares posibles. Total: 9
+		\item 2° persona: 8 lugares posibles. Total: $9 \times 8$
+		\item 3° persona: 7 lugares posibles. Total: $9\times 8\times 7$.
 	\end{itemize}
 	
 \end{frame}
@@ -299,7 +297,7 @@
 	%\end{ejemplo}
 	\vskip .2cm
 	
-	Podríamos haberlo hecho directamente por el teorema: elegir  3 elementos entre 9 son
+	Podríamos haberlo hecho directamente por la proposición: elegir  3 elementos entre 9 son
 	\vskip .2cm
 	\begin{align*}
 	\frac{9!}{(9-3)!} &= \frac{9!}{6!} \\
