--- a/2021-1/beamer/C08_md1.tex
+++ b/2021-1/beamer/C08_md1.tex
@@ -99,7 +99,7 @@
 	\\[\baselineskip] ${}^{}$
 	\\[\baselineskip]
 }
-\date[14/04/2020]{14 de abril  de 2020}
+\date[13/04/2021]{13 de abril  de 2021}
 
 
 
@@ -373,7 +373,7 @@
 			\frac{n!}{(n-m+1)!\,(m-1)!} +  \frac{n!}{(n-m)!\,m!} = \frac{(n+1)!}{(n-m+1)!\,m!}
 		\end{equation*}
 		
-		y lo dejamos como ejercicio.
+		y lo dejamos como ejercicio.\qed
 		
 	\end{frame}
 	
@@ -430,7 +430,7 @@
 		\vskip .2cm
 		El  triángulo es denominado \emph{triángulo de Pascal}. 
 		\vskip .2cm
-		Entre las propiedades que cuenta el triángulo de Pascal está la de ser simétrico respecto a su altura, como consecuencia de la simetría de los números combinatorios. 
+		Entre las propiedades que cuenta el triángulo de Pascal está la de ser simétrico respecto al eje vertical central, como consecuencia de la simetría de los números combinatorios. 
 	\end{frame}
 	
 	
