--- a/2021-1/beamer/C14_md1.tex
+++ b/2021-1/beamer/C14_md1.tex
@@ -94,7 +94,7 @@
 
 
 
-\title[Clase 14 - Factorización en primos]{Matemática Discreta I \\ Clase 14 - Factorización en primos 1}
+\title[Clase 14 - Factorización prima]{Matemática Discreta I \\ Clase 14 - Factorización prima 1}
 %\author[C. Olmos / A. Tiraboschi]{Carlos Olmos / Alejandro Tiraboschi}
 \institute[]{\normalsize FAMAF / UNC
 	\\[\baselineskip] ${}^{}$
